--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     margin: 0;
+    padding: 0;
     overflow: hidden;
     position: relative;
 }
@@ -20,9 +21,37 @@ body {
     left: 20px;
     z-index: 2; /* Above the canvas */
     padding: 10px 20px;
-    background-color: rgba(0, 0, 0, 0.7);
+    background-color: rgba(255, 64, 0, 0.7);
     color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
 }
+
+
+
+span.ripple {
+    position: absolute;
+    border-radius: 50%;
+    transform: scale(0);
+    animation: ripple 600ms linear;
+    background-color: rgba(0, 76, 255, 0.7);
+  }
+  
+  @keyframes ripple {
+    to {
+      transform: scale(4);
+      opacity: 0;
+    }
+  }
+  
+
+h1{
+    font-size: 100px;
+    z-index: 3;
+    position: absolute;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+
+}
+
+h1:hover
