--- a/style.css
+++ b/style.css
@@ -17,14 +17,15 @@ body {
 
 #button {
     position: absolute;
-    top: 20px; /* Position the button */
-    left: 20px;
-    z-index: 2; /* Above the canvas */
-    padding: 10px 20px;
-    background-color: rgba(255, 64, 0, 0.7);
+    left:50%;
+    top: 50vh;
+    font-size: 100px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    z-index: 2;
+    padding: 50px 30px;
+    background-color:transparent;
+    border: 3px solid rgb(0, 42, 255);
     color: white;
-    border: none;
-    border-radius: 5px;
     cursor: pointer;
 }
 
@@ -32,15 +33,15 @@ body {
 
 span.ripple {
     position: absolute;
-    border-radius: 50%;
+    border-radius: 10%;
     transform: scale(0);
     animation: ripple 600ms linear;
-    background-color: rgba(0, 76, 255, 0.7);
+    background-color: rgb(0, 42, 255);
   }
   
   @keyframes ripple {
     to {
-      transform: scale(4);
+      transform: scale(1);
       opacity: 0;
     }
   }
@@ -49,6 +50,7 @@ span.ripple {
 h1{
     font-size: 100px;
     z-index: 3;
+    color: rgb(0, 42, 255);
     position: absolute;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 
