--- a/style.css
+++ b/style.css
@@ -18,12 +18,12 @@ body {
     left: 0;
     width: 100vw;
     height: 100vh;
-    z-index: 1; /* Behind content */
+    z-index: 1; 
 }
 
 .content {
     position: relative;
-    z-index: 2; /* Above canvas */
+    z-index: 2; 
     padding: 20px;
     color: rgb(0, 42, 255);
 }
