--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    font-family: Arial, sans-serif;
+
 }
 
 .container {
@@ -18,47 +18,28 @@ body {
     left: 0;
     width: 100vw;
     height: 100vh;
-    z-index: 1; 
+    z-index: 5; 
     pointer-events: auto;
 }
 
 .content {
-    position: relative;
+    position: absolute;
     z-index: 2; 
     padding: 20px;
-    color: rgb(0, 42, 255);
+    color: rgb(251, 251, 251);
 }
 
-h1, h2 {
+h1{
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     margin: 10px 0;
 }
 
-h1 {
-    font-size: 36px;
-}
-
-h2 {
-    font-size: 28px;
-}
 
 p {
     font-size: 16px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     line-height: 1.5;
+    width: 50%;
     margin-bottom: 20px;
 }
 
-#button {
-    font-size: 16px;
-    padding: 10px 20px;
-    background-color: transparent;
-    border: 2px solid rgb(169, 20, 20);
-    color: rgb(169, 20, 20);
-    cursor: pointer;
-    transition: background-color 0.3s, color 0.3s;
-}
-
-#button:hover {
-    background-color: rgb(169, 20, 20);
-    color: white;
-}
