--- a/style.css
+++ b/style.css
@@ -1,15 +1,17 @@
 body {
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
-
+    overflow: hidden;
 }
 
 .container {
-    position: relative;
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 100%;
-    height: 100vh;
-    overflow: hidden;
+    height: 100%;
+    overflow-y: auto;
+    z-index: 2;
 }
 
 #canvas {
@@ -18,22 +20,19 @@ body {
     left: 0;
     width: 100vw;
     height: 100vh;
-    z-index: 5; 
+    z-index: 5;
     pointer-events: auto;
 }
 
 .content {
-    position: absolute;
-    z-index: 2; 
     padding: 20px;
-    color: rgb(255, 0, 0);
+    color: rgb(0, 34, 255);
 }
 
-h1{
+h1 {
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     margin: 10px 0;
 }
-
 
 p {
     font-size: 16px;
@@ -42,4 +41,3 @@ p {
     width: 50%;
     margin-bottom: 20px;
 }
-
