--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    overflow: hidden;
+
 }
 
 .container {
@@ -27,6 +27,10 @@ body {
 .content {
     padding: 20px;
     color: rgb(0, 34, 255);
+    height: 100vh;
+    overflow-y: scroll;
+    scrollbar-color: red orange;
+    scrollbar-width: thin;
 }
 
 h1 {
