--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@ body {
 
 }
 
+a{
+    position: absolute;
+    z-index: 777;
+    top: 20%;
+}
+
 .container {
     position: absolute;
     top: 0;
