--- a/stylem.css
+++ b/stylem.css
@@ -4,7 +4,7 @@ body, html {
     padding: 0;
     overflow: hidden;
     height: 100%;
-    background-color: #fff709;
+    background-color: #2aff09;
 }
 
 #viewport {
