--- a/stylem.css
+++ b/stylem.css
@@ -1,27 +1,8 @@
-/* styles.css */
-body, html {
+body {
     margin: 0;
-    padding: 0;
-    overflow: hidden;
-    height: 100%;
-    background-color: #2aff09;
-}
-
-#viewport {
+    overflow: hidden; /* Prevent scrollbars */
     position: relative;
-    width: 100vw;
-    height: 100vh;
-    background: #4fa4ff;
-    overflow: hidden;
-    touch-action: none; 
-}
-
-canvas {
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    will-change: transform;
+    transform-origin: top left;
 }
 
 #motion-permission {
@@ -31,23 +12,21 @@ canvas {
     transform: translate(-50%, -50%);
     padding: 20px 40px;
     font-size: 18px;
-    color: #fff;
-    background-color: #007bff;
+    font-family: fantasy;
+    color: #ff0000;
+    background-color: #4bff04;
     border: none;
     border-radius: 5px;
     cursor: pointer;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-#motion-permission:hover {
-    background-color: #0056b3;
-}
 
 .star {
     position: absolute;
-    width: 5px;
-    height: 5px;
-    background-color: #ff0;
+    width: 20px;
+    height: 20px;
+    background-color: rgb(0, 98, 255);
     border-radius: 50%;
     pointer-events: none;
 }
