--- a/stylem.css
+++ b/stylem.css
@@ -1,8 +1,9 @@
 body {
     margin: 0;
-    overflow: hidden; /* Prevent scrollbars */
+    overflow: hidden; 
     position: relative;
     background-image: url("tap.gif");
+    background-repeat:repeat;
     transform-origin: top left;
 }
 
