--- a/stylem.css
+++ b/stylem.css
@@ -3,8 +3,9 @@ body {
     overflow: hidden; 
     position: relative;
     background-image: url("tap.gif");
-    background-repeat:repeat;
+
     transform-origin: top left;
+    background-size: 100% 100%;
 }
 
 #motion-permission {
