--- a/stylem.css
+++ b/stylem.css
@@ -16,8 +16,8 @@ body {
     padding: 20px 40px;
     font-size: 18px;
     font-family: fantasy;
-    color: #ff0000;
-    background-color: #4bff04;
+    color: #ffffff;
+    background-color: #000000;
     border: none;
     border-radius: 5px;
     cursor: pointer;
