--- a/stylel.css
+++ b/stylel.css
@@ -8,8 +8,8 @@
     height: 100vh;         
     margin: 0;
     font-family: Arial, sans-serif;
-    background-color: #f2ff00;
-    color: #fff;
+    background-color: #ffffff;
+    color: #000000;
     overflow: hidden;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -54,10 +54,10 @@
   
   #urlLink {
     text-decoration: underline;
-    background-color: green;
+    background-color: rgb(254, 254, 254);
     padding: 5px 10px;
     border: 3px solid rgb(0, 255, 242);
-    color: rgb(0, 255, 242);
+    color: rgb(0, 0, 0);
     display: inline-block;
   }
   
@@ -65,9 +65,9 @@
   marquee {
     font-family: 'GINTO', sans-serif;
     font-size: 2.5vw;
-    color: rgb(255, 0, 238);
+    color: rgb(255, 255, 255);
     -webkit-text-stroke: 1px #00e5ff;
-    background-color: green;
+    background-color: rgb(0, 0, 0);
     position: absolute;
     left: 0;
     width: 100%;
