--- a/stylem.css
+++ b/stylem.css
@@ -3,7 +3,7 @@ body {
     overflow: hidden; 
     position: relative;
     background-image: url("tap.gif");
-    background-repeat: repeat-x;
+    background-repeat: repeat-y;
 
     transform-origin: top left;
  
