--- a/stylel.css
+++ b/stylel.css
@@ -46,6 +46,7 @@
     left: 50%;
     transform: translate(-50%, -50%);
     font-size: 1.5rem;
+    margin-top: 10px;
     font-family: 'GINTO', sans-serif;
     color: rgb(0, 255, 242);
     text-align: center;
@@ -55,7 +56,7 @@
   #urlLink {
     text-decoration: underline;
     background-color: rgb(254, 254, 254);
-    padding: 30px 10px;
+    padding: 5px 10px;
     border: 3px solid rgb(0, 255, 242);
     color: rgb(0, 0, 0);
     display: inline-block;
