--- a/stylel.css
+++ b/stylel.css
@@ -27,12 +27,12 @@
   #clickButton {
     font-size: 4vw; 
     padding: 2vw 4vw; 
-    color: #f2ff00;
-    -webkit-text-stroke: 2px rgb(0, 255, 255);
+    color: #ffffff;
+ 
     border-radius: 8px;
     font-family: 'GINTO', sans-serif;
-    background-color: rgb(255, 0, 238);
-    border: 3px solid rgb(0, 255, 255);
+    background-color: rgb(0, 0, 0);
+    border: 3px solid rgb(255, 255, 255);
     text-align: center;
     cursor: pointer;
     position: relative;
@@ -57,7 +57,7 @@
     text-decoration: underline;
     background-color: rgb(254, 254, 254);
     padding: 5px 10px;
-    border: 3px solid rgb(0, 255, 242);
+    border: 3px solid rgb(0, 0, 0);
     color: rgb(0, 0, 0);
     display: inline-block;
   }
@@ -67,7 +67,7 @@
     font-family: 'GINTO', sans-serif;
     font-size: 2.5vw;
     color: rgb(255, 255, 255);
-    -webkit-text-stroke: 1px #00e5ff;
+ 
     background-color: rgb(0, 0, 0);
     position: absolute;
     left: 0;
