--- a/style.css
+++ b/style.css
@@ -50,3 +50,26 @@ p{
     font-style: normal;
     font-size: 40px;
 }
+
+header{
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+    color:blue;
+    position: fixed;
+
+    width: 100vw;
+    padding-top: 0;
+    padding-right: 10px;
+    font-size: 20px;
+}
+
+.headers{
+    height: 4vh;
+    
+    padding-top: 0;
+    padding-left: 20px;
+    font-family: monospace;
+    font-size: 10px;
+    mix-blend-mode: multiply
+}
