--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ a{
     padding: 20px;
     color: rgb(0, 34, 255);
     width:80%;
-    height: 100vh;
+    height: 200vh;
     
     scrollbar-color: red orange;
     scrollbar-width: thin;
@@ -53,23 +53,32 @@ p{
 
 header{
     display: flex;
+    z-index: 10;
     justify-content: space-between;
     gap: 20px;
     color:blue;
     position: fixed;
-
+    background: rgb(255,255,255);
+    background: linear-gradient(0deg, rgba(255,255,255,0.4150035014005602) 0%, rgba(255,255,255,1) 74%);
     width: 100vw;
-    padding-top: 0;
-    padding-right: 10px;
+    padding-top: 10px;
+
     font-size: 20px;
 }
 
 .headers{
-    height: 4vh;
+    height: 5vh;
     
     padding-top: 0;
     padding-left: 20px;
+    padding-right: 20px;
     font-family: monospace;
     font-size: 10px;
     mix-blend-mode: multiply
+}
+
+#rotate{
+    height: 4vh;
+    width: auto;
+
 }
