--- a/style.css
+++ b/style.css
@@ -7,10 +7,7 @@ body {
 
 
 a{
-    position: absolute;
-    z-index: 777;
-    top: 40%;
-    margin: 20px;
+
 }
 
 .container {
@@ -81,4 +78,8 @@ header{
     height: 4vh;
     width: auto;
 
+}
+
+span{
+    font-family: "Rubik Puddles", serif;
 }
