--- a/style.css
+++ b/style.css
@@ -95,7 +95,6 @@ header{
 
 .headers{
     height: 5vh;
-    
     padding-top: 0;
     padding-left: 20px;
     padding-right: 20px;
@@ -112,4 +111,10 @@ header{
 
 span{
     font-family: "Rubik Puddles", serif;
+}
+
+.bracket{
+    font-family: "instrument serif", serif;
+    font-size: 10px;
+
 }
