--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body {
     width: 100vw;
     height: 100vh;
     z-index: 5;
-    pointer-events: auto;
+    pointer-events:visiblePainted;
 }
 
 .content {
