--- a/style.css
+++ b/style.css
@@ -89,7 +89,8 @@ header{
     width: 100vw;
     padding-top: 10px;
 
-    font-size: 20px;
+    font-size: 10px;
+    line-height: 20px;
 }
 
 .headers{
