--- a/style.css
+++ b/style.css
@@ -57,13 +57,13 @@ body {
     width: 100vw;
     height: 100vh;
     z-index: 5;
-    pointer-events:none;
+    pointer-events:auto;
     touch-action: none; 
 }
 
 .content {
     padding: 20px;
-    color: rgb(68, 255, 0);
+    color: blue;
     width:80%;
     height: 250vh;
     position: relative;
