--- a/style.css
+++ b/style.css
@@ -51,11 +51,11 @@ body {
 }
 
 #canvas {
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100vw;
-    height: 100vh;
+    height: 650vh;
     z-index: 5;
     pointer-events:auto;
     touch-action: none; 
