--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    overflow-y: auto;
+
     z-index: 2;
 }
 
@@ -56,7 +56,7 @@ body {
     left: 0;
     width: 100vw;
     height: 650vh;
-    z-index: 5;
+    z-index: 1;
     touch-action: auto;
     pointer-events: visible;
     
@@ -84,7 +84,7 @@ p{
 header{
     display: flex;
     z-index: 10;
-    justify-content: space-between;
+    justify-content: space-around;
     gap: 5px;
     color:blue;
     position: fixed;
