--- a/style.css
+++ b/style.css
@@ -56,11 +56,9 @@ body {
     left: 0;
     width: 100vw;
     height: 650vh;
-    z-index: 1;
- 
-    
-   
-}
+    z-index: 5;
+    pointer-events: none;
+   }
 
 .content {
     padding: 20px;
