--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ body {
     left: 0;
     width: 100vw;
     height: 650vh;
-    z-index: 5;
+    z-index: 1;
    }
 
 .content {
@@ -75,6 +75,7 @@ p{
     font-family: "instrument serif", serif;
     font-style: normal;
     font-size: 35px;
+    pointer-events: none;
     line-height: 40px;
 }
 
