--- a/stylem.css
+++ b/stylem.css
@@ -1,13 +1,10 @@
 body {
     margin: 0;
-    padding:0;
-    overflow: hidden; 
+    padding: 0;
+    overflow: hidden;
     position: relative;
     background-color: white;
-    background-repeat: repeat-y;
-
     transform-origin: top left;
- 
 }
 
 #motion-permission {
@@ -18,7 +15,7 @@ body {
     transform: translate(-50%, -50%);
     padding: 20px 40px;
     font-size: 18px;
-    font-family: fantasy;
+    font-family: "instrument";
     color: #001eff;
     background-color: #ffffff;
     border: none;
@@ -27,40 +24,79 @@ body {
     box-shadow: 0 4px 8px rgba(0, 13, 255, 0.2);
 }
 
-
 .star {
     position: relative;
     z-index: 33;
-    position: absolute;
     width: 20px;
     height: 20px;
     border-radius: 50%;
     pointer-events: none;
+    background-color: #001eff;
 }
 
-#viewport{
+#viewport {
     background-color: transparent;
     position: relative;
     z-index: 33;
     border: none;
 }
 
-
-a{
+a {
     font-size: 50px;
 }
 
-h1{
-
+h1 {
     color: #001eff;
     font-size: 50px;
-    padding-left:10px ;
+    padding-left: 10px;
     font-family: "Rubik Puddles", serif;
     scroll-behavior: auto;
 }
 
-.top{
+.top {
     position: fixed;
     z-index: 600;
     width: 100vw;
 }
+
+.text-box {
+    font-size: 30px;
+    color: #001eff;
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+    font-family: "Rubik Puddles", serif;
+}
+
+.scene-image1 {
+    position: absolute;
+    width: 200px; 
+    height: auto;
+    top: 100px; 
+    left: 100px; 
+    border-radius: 15px;
+    box-shadow: 0 2px 10px rgb(38, 0, 255);
+}
+
+.scene-image2 {
+    position: absolute;
+    width: 200px; 
+    height: auto;
+    top: 2000px; 
+    left: 800px; 
+    border-radius: 15px;
+    box-shadow: 0 2px 10px rgb(38, 0, 255);
+}
+
+.scene-image3 {
+    position: absolute;
+    width: 200px; 
+    height: auto;
+    top: 400px; 
+    left: 1200px; 
+    border-radius: 15px;
+    box-shadow: 0 2px 10px rgb(38, 0, 255);
+}
+
+
