--- a/stylem.css
+++ b/stylem.css
@@ -15,7 +15,7 @@ body {
     transform: translate(-50%, -50%);
     padding: 20px 40px;
     font-size: 18px;
-    font-family: "instrument";
+    font-family: "instrument serif";
     color: #001eff;
     background-color: #ffffff;
     border: none;
