--- a/stylem.css
+++ b/stylem.css
@@ -100,3 +100,13 @@ h1 {
 }
 
 
+.back {
+    z-index: 555;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    pointer-events: none;
+}
