--- a/style.css
+++ b/style.css
@@ -3,7 +3,10 @@ body {
     padding: 0;
 
 }
-
+@font-face {
+    font-family: 'serial';
+    src: url('SerialA-Input.ttf');
+  }
 
 
 .next{
@@ -51,7 +54,7 @@ body {
 }
 
 #canvas {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     width: 100vw;
@@ -84,14 +87,15 @@ p{
 header{
     display: flex;
     z-index: 10;
-    justify-content: space-around;
+    justify-content: space-between;
     gap: 5px;
     color:blue;
     position: fixed;
     background: rgb(255,255,255);
     background: linear-gradient(0deg, rgba(255,255,255,0.4150035014005602) 0%, rgba(255,255,255,1) 74%);
     width: 100vw;
-    padding-top: 8px;
+    height: 150px;
+    padding-top: 0px;
 }
 
 .headers{
@@ -99,12 +103,12 @@ header{
     padding-top: 0;
     padding-left: 20px;
     padding-right: 20px;
-    font-family: monospace;
-    font-size: 10px;
+    font-family: 'serial';
+    font-size: 20px;
     mix-blend-mode: multiply
 }
 #rotate{
-    padding-top:5px
+    padding-top:15px
 }
 
 
