--- a/stylem.css
+++ b/stylem.css
@@ -107,6 +107,7 @@ h1 {
     left: 0;
     width: 100vw;
     height: 100vh;
-
+    max-width: 100vw;
+    max-height: 100vh;
     pointer-events: none;
 }
