--- a/stylem.css
+++ b/stylem.css
@@ -101,13 +101,12 @@ h1 {
 
 
 .back {
-    z-index: 555;
     position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     max-width: 100vw;
     max-height: 100vh;
+    z-index: 3;
     pointer-events: none;
 }
