--- a/stylem.css
+++ b/stylem.css
@@ -41,10 +41,11 @@ a {
 
 h1 {
     color: #001eff;
-    font-size: 25px;
+    font-size: 20px;
     padding-left: 10px;
     font-family: "Rubik Puddles", serif;
     position: fixed;
+    font-weight: normal;
     z-index: 777;
 
 }
