--- a/stylem.css
+++ b/stylem.css
@@ -60,10 +60,11 @@ h1 {
     font-size: 30px;
     color: #001eff;
     background-color: #fff;
+    width: 290px;
     padding: 10px;
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    font-family: "Rubik Puddles", serif;
+    font-family:  "instrument serif";
 }
 
 .scene-image1 {
@@ -81,7 +82,6 @@ h1 {
     height: auto;
     top: 2000px; 
     left: 800px; 
-    border-radius: 15px;
     box-shadow: 0 2px 10px rgb(38, 0, 255);
 }
 
@@ -91,7 +91,6 @@ h1 {
     height: auto;
     top: 400px; 
     left: 1200px; 
-    border-radius: 15px;
     box-shadow: 0 2px 10px rgb(38, 0, 255);
 }
 
