--- a/stylem.css
+++ b/stylem.css
@@ -92,6 +92,7 @@ h2 {
     width: 200px; 
     height: auto;
     top: 250px; 
+    z-index: 30;
     left: 100px; 
     box-shadow: 0 2px 10px rgb(38, 0, 255);
 }
@@ -102,8 +103,20 @@ h2 {
     height: auto;
     top: 2000px; 
     left: 800px; 
+    z-index: 31;
     box-shadow: 0 2px 10px rgb(38, 0, 255);
 }
+
+.scene-image4 {
+    position: absolute;
+    width: 400px; 
+    height: auto;
+    top: 400px; 
+    left: 1200px; 
+    z-index: 32;
+    box-shadow: 0 2px 10px rgb(38, 0, 255);
+}
+
 
 .scene-image3 {
     position: absolute;
@@ -112,7 +125,9 @@ h2 {
     top: 400px; 
     left: 1200px; 
     box-shadow: 0 2px 10px rgb(38, 0, 255);
+    z-index: 33;
 }
+
 
 
 .back {
