--- a/stylem.css
+++ b/stylem.css
@@ -107,7 +107,7 @@ h2 {
     box-shadow: 0 2px 10px rgb(38, 0, 255);
 }
 
-.scene-image4 {
+.scene-image3 {
     position: absolute;
     width: 400px; 
     height: auto;
@@ -118,7 +118,7 @@ h2 {
 }
 
 
-.scene-image3 {
+.scene-image4 {
     position: absolute;
     width: 200px; 
     height: auto;
@@ -129,6 +129,15 @@ h2 {
 }
 
 
+.scene-image5 {
+    position: absolute;
+    width: 500px; 
+    height: auto;
+    top: 800px; 
+    left: 1200px; 
+    box-shadow: 0 2px 10px rgb(38, 0, 255);
+    z-index: 29;
+}
 
 .back {
     position: fixed;
