--- a/stylem.css
+++ b/stylem.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
     overflow: hidden;
     position: relative;
-    background-color: rgb(255, 255, 255);
+    background-color:#F08FBA;
     transform-origin: top left;
 }
 
