--- a/style.css
+++ b/style.css
@@ -85,8 +85,8 @@ header{
     gap: 5px;
     color:blue;
     position: fixed;
-    background: rgb(255,255,255);
-    background: linear-gradient(0deg, rgba(255,255,255,0.4150035014005602) 0%, rgba(255,255,255,1) 74%);
+    background: rgb(150,150,150);
+    background: linear-gradient(0deg, rgba(255,255,255,0.4150035014005602) 0%,   rgb(150, 150, 150) 74%);
     width: 100vw;
     height: 150px;
     padding-top: 0px;
