--- a/stylem.css
+++ b/stylem.css
@@ -26,6 +26,7 @@ body {
     background-color: #ffffff;
     border: none;
     border-radius: 5px;
+    z-index: 999;
     cursor: pointer;
     box-shadow: 0 4px 8px rgba(0, 13, 255, 0.2);
 }
