--- a/stylem.css
+++ b/stylem.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
     overflow: hidden;
     position: relative;
-    background-color:#fcbcd9;
+    background-color:#fffdfe;
     transform-origin: top left;
 }
 
@@ -97,7 +97,7 @@ a {
     top: 250px; 
     z-index: 30;
     left: 100px; 
-    box-shadow: 0 2px 10px rgb(38, 0, 255);
+
 }
 
 .scene-image2 {
@@ -106,8 +106,7 @@ a {
     height: auto;
     top: 2000px; 
     left: 800px; 
-    z-index: 31;
-    box-shadow: 0 2px 10px rgb(38, 0, 255);
+
 }
 
 .scene-image3 {
@@ -117,7 +116,7 @@ a {
     top: 400px; 
     left: 1200px; 
     z-index: 32;
-    box-shadow: 0 2px 10px rgb(38, 0, 255);
+
 }
 
 
@@ -127,7 +126,7 @@ a {
     height: auto;
     top: 400px; 
     left: 1200px; 
-    box-shadow: 0 2px 10px rgb(38, 0, 255);
+
     z-index: 33;
 }
 
@@ -138,7 +137,7 @@ a {
     height: auto;
     top: 800px; 
     left: 1200px; 
-    box-shadow: 0 2px 10px rgb(38, 0, 255);
+
     z-index: 29;
 }
 
