--- a/stylem.css
+++ b/stylem.css
@@ -3,7 +3,7 @@ body {
     padding: 0;
     overflow: hidden;
     position: relative;
-    background-color:#fffdfe;
+    background-color:#fcbcd9;;
     transform-origin: top left;
 }
 
@@ -42,9 +42,7 @@ body {
 }
 
 
-a {
-    font-size: 50px;
-}
+
 
 h1 {
     color:#fcbcd9;
@@ -54,6 +52,8 @@ h1 {
     font-family: "Rubik Puddles", serif;
     position: fixed;
     font-weight: normal;
+    margin:0;
+    top:0;
     z-index: 777;
 
 }
@@ -146,8 +146,8 @@ a {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    max-width: 100vw;
-    max-height: 100vh;
+    max-width: 110vw;
+    max-height: 110vh;
     z-index: 3;
     pointer-events: none;
 }
