--- a/stylem.css
+++ b/stylem.css
@@ -31,16 +31,24 @@ body {
     box-shadow: 0 4px 8px rgba(0, 13, 255, 0.2);
 }
 
-.star {
-    position: relative;
-    z-index: 33;
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
+#stars-container {
+    position: fixed;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
     pointer-events: none;
-    background-color: #001eff;
+    z-index: 9999; /* Ensures it's above everything */
 }
 
+.star {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background-color: #001eff;
+    border-radius: 50%;
+    z-index: 9999; /* Ensures stars are visible */
+}
 
 
 
