--- a/stylem.css
+++ b/stylem.css
@@ -53,7 +53,7 @@ body {
 
 
 h1 {
-    color:#0000FF;
+    color: #fcbcd9;
     font-size: 45px;
     padding-left: 10px;
     text-align: center;
@@ -69,7 +69,7 @@ h1 {
 
 /*Haalloooo*/
 a {
-    color:#2929fc;
+    color: #fcbcd9;
     font-size: 25px;
     padding-left: 10px;
     bottom: 5px;
@@ -105,7 +105,7 @@ a {
     height: auto;
     top: 250px; 
     z-index: 30;
-    box-shadow: 0 0 8px 8px #0000FF inset;
+    box-shadow: 30px 20px 8px 8px #0000FF inset;
     left: 100px; 
 
 }
