--- a/stylem.css
+++ b/stylem.css
@@ -58,7 +58,7 @@ h1 {
     text-align: center;
     font-family: "Rubik Puddles", serif;
     position: fixed;
-    mix-blend-mode: difference;
+
     font-weight: normal;
     margin:0;
     top:0;
@@ -100,11 +100,12 @@ a {
 
 .scene-image1 {
     position: absolute;
-    width: 200px; 
+    width: 300px; 
     height: auto;
     top: 250px; 
     z-index: 30;
-    box-shadow: 30px 20px 8px 8px #0000FF inset;
+    border-radius: 50px;
+    border: 3px solid #fcbcd9;
     left: 100px; 
 
 }
@@ -113,7 +114,8 @@ a {
     position: absolute;
     width: 200px; 
     height: auto;
-    box-shadow: 0 0 8px 8px #0000FF inset;
+    border-radius: 50px;
+    border: 3px solid #fcbcd9;
     top: 2000px; 
     left: 800px; 
 
