--- a/stylem.css
+++ b/stylem.css
@@ -104,8 +104,8 @@ a {
     height: auto;
     top: 250px; 
     z-index: 30;
-    border-radius: 50px;
-    border: 3px solid #fcbcd9;
+    border-radius: 90px;
+    border: 3px solid blue;
     left: 100px; 
 
 }
@@ -156,6 +156,28 @@ a {
     z-index: 29;
 }
 
+
+.scene-image6 {
+    position: absolute;
+    width: 500px; 
+    height: auto;
+    top: 100px; 
+    left: 4000px; 
+    box-shadow: 0 0 8px 8px #0000FF inset;
+
+    z-index: 29;
+}
+
+.scene-image7 {
+    position: absolute;
+    width: 500px; 
+    height: auto;
+    top: 600px; 
+    left: 1000px; 
+    box-shadow: 0 0 8px 8px #0000FF inset;
+
+    z-index: 29;
+}
 .back {
     position: fixed;
     top: 50%;
