--- a/stylem.css
+++ b/stylem.css
@@ -105,7 +105,7 @@ a {
     top: 250px; 
     z-index: 30;
     border-radius: 90px;
-    border: 3px solid blue;
+    box-shadow: 0 0 8px 8px  #fcbcd9 inset;
     left: 100px; 
 
 }
