--- a/style.css
+++ b/style.css
@@ -59,7 +59,7 @@ body {
 
 .content {
     padding: 25px;
-    padding-top:40vh;
+    padding-top:100vh;
     color: blue;
     width:80%;
     height: 250vh;
@@ -88,6 +88,7 @@ header{
     background: rgb(255,255,255);
     background: linear-gradient(0deg, rgba(255,255,255,0) 0%, rgba(150,150,150,1) 83%);
     width: 100vw;
+    z-index: 77777;
     height: 150px;
     padding-top: 0px;
 }
@@ -127,14 +128,15 @@ span{
 .intro {
     font-family: "Rubik Puddles", serif;
     font-size: 15vw;
-    transform: scaleY(6.5);
-    transform-origin: top; /* Ensures it contracts from the top */
-    z-index: 2;
-    padding: 4cqw;
-    z-index: 8888;
-    padding-top: 80px;
     color: blue;
-    position: relative;
-    mix-blend-mode: exclusion;
-    transition: transform 0.3s ease-out;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    transform: scaleY(12.5); /* Stretched initially */
+    transform-origin: top;
+    padding-left: 25px;
+    z-index: 333;
+    transition: transform 0.2s ease-out, opacity 0.2s ease-out;
 }
