--- a/stylem.css
+++ b/stylem.css
@@ -96,6 +96,8 @@ a {
     border-radius: 5px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     font-family:  "instrument serif";
+    position: absolute;
+    z-index: 100;
 }
 
 .scene-image1 {
