--- a/style.css
+++ b/style.css
@@ -9,24 +9,22 @@ body {
   }
 
 
-.next{
+  .next {
     font-family: "Rubik Puddles", serif;
-    color:rgb(0, 34, 255);
-    transition-property: letter-spacing;
+    color: rgb(0, 34, 255);
+
     letter-spacing: normal;
     transition-duration: 3s;
     transition-timing-function: ease;
     font-size: 10vw;
-    margin-bottom: 30px;
-    margin-left: 50px;
-    padding-left: 20px;
-    position: absolute;
+    position: relative; 
+    bottom: 20px; 
+    padding: 25px;
+    transform: translateX(-50%); 
     z-index: 30;
     text-decoration: none;
-    top: 690vh;
-    bottom: 5px;
-
 }
+
 
 
 .next:active{
@@ -100,7 +98,7 @@ header{
     padding-right: 20px;
     font-family: 'serial';
     font-size: 20px;
-    mix-blend-mode: multiply
+
 }
 #rotate{
     padding-top:15px
@@ -139,4 +137,17 @@ span{
     padding-left: 25px;
     z-index: 333;
     transition: transform 0.2s ease-out, opacity 0.2s ease-out;
+}
+
+
+
+.boden {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 190px; /* Adjust height as needed */
+    z-index: 99999;
+    pointer-events: none; 
+    background: linear-gradient(0deg, rgba(150,150,150,1) 0%, rgba(255,255,255,0) 100%);
 }
