--- a/style.css
+++ b/style.css
@@ -139,3 +139,21 @@ span{
     pointer-events: none; 
     background: linear-gradient(0deg, rgba(150,150,150,1) 0%, rgba(255,255,255,0) 100%);
 }
+
+#motion-permission {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 15px 25px;
+    font-size: 18px;
+    font-weight: bold;
+    background-color: rgba(150,150,150,1);
+    color: blue;
+    border: none;
+
+    cursor: pointer;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
+    z-index: 10000;
+
+}
