--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body {
     width: 100vw;
     height: 650vh;
     
-    z-index: 5;
+    z-index: 999;
    }
 
 .content {
@@ -50,6 +50,7 @@ body {
     color: blue;
     width:80%;
     height: 650vh;
+    overflow-y: auto;
     position: relative;
     z-index: 2;
    
