--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body {
     width: 100vw;
     height: 650vh;
     
-    z-index: 999;
+    z-index: 9999;
    }
 
 .content {
@@ -129,6 +129,7 @@ span{
     position: fixed;
     top: 50%;
     left: 50%;
+    font-family: 'instrument serif';
     transform: translate(-50%, -50%);
     padding: 15px 25px;
     font-size: 18px;
