--- a/style.css
+++ b/style.css
@@ -137,6 +137,7 @@ span{
     background-color: rgba(150,150,150,1);
     color: blue;
     border: none;
+    text-decoration: none;
 
     cursor: pointer;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
