--- a/style.css
+++ b/style.css
@@ -68,12 +68,13 @@ header{
 
 .headers{
     height: 5vh;
-    padding-top: 0;
+    padding-top: 2opx;
     padding-left: 20px;
     padding-right: 20px;
     text-decoration: none;
     font-family: 'serial';
     font-size: 20px;
+    color:blue;
 
 }
 #rotate{
